@@ -1,5 +1,6 @@
 2012-12-01  Morphe  <Morphe@Morphe-PC>
 
+	* src\Window\Drawer.cpp (Drawer::getDefaultGuiFont): Changed to recieve font from SystemParametersInfo
 	* src\Widget\Widget.h: Added mouse events for Widget class
 
 2012-11-30  Morphe  <Morphe@Morphe-PC>
